完善悬赏页面的切换及模拟数据

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -46,7 +46,9 @@
     </view>
 
     <view class="rewards">
-        <template is="reward" />
+        <block wx:for="{{rewardsCurrentTab==0 ? rewardeds:rewardings}}" wx:for-item="reward">
+            <template is="reward" data="{{reward}}"/>
+        </block>
     </view>
     
 
