--- a/templates/reward.wxml
+++ b/templates/reward.wxml
@@ -8,21 +8,21 @@
         <view class="a-reward">
             <view class="reward-header">
                 <view class="user">
-                    <image class="user-avatar" src="/images/test-ad.jpg" />
-                    <text class="user-nickname">搬砖工｜搬砖的</text>
+                    <image class="user-avatar" src="{{reward.authorHead}}" />
+                    <text class="user-nickname">{{reward.authorName}}|{{reward.authorBio}}</text>
                 </view>
                 <view class="offer">
                     <text>¥</text>
-                    <text>50</text>
+                    <text>{{reward.price}}</text>
                 </view>
             </view>
 
             <view class="">
-                <view class="reward-body">如何锻炼自己不胡思乱想，脱离神经衰弱，迅速入睡？</view>
+                <view class="reward-body">{{reward.content}}</view>
                 <view class="reward-footer">
                     <view class="status">
-                        <text>悬赏成功</text>
-                        <text class="answers">10个回答免费听</text>
+                        <text>{{reward.status == '1'?'悬赏成功':'正在悬赏'}}</text>
+                        <text class="answers">{{reward.answersNum}}个回答免费听</text>
                     </view>
                     
                 </view>
