--- a/app.wxss
+++ b/app.wxss
@@ -1,7 +1,11 @@
 /**app.wxss**/
 page{
  background: #f5f5f5;
-
+ font-family: PingFang-SC-Regular,sans-serif;
+ font-size: 40rpx;
+ -webkit-tap-highlight-color: transparent;
+ -webkit-font-smoothing: antialiased;
+ -webkit-overflow-scrolling: touch;
 }
 .container {
   height: 100%;
